<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMSFilter</string>

    <string name="title_activity_main">SMSFilter</string>
	<string name="title_activity_settings">Settings</string>
	<string name="title_add_filter">Add Filter</string>

    <string name="tab_sms_list">Blocked</string>
    <string name="tab_filter_list">Filters</string>

	<string name="pref_filter_enabled">Enable filter</string>
	<string name="pref_cat_general">General Settings</string>
	<string name="pref_filter_enabled_enable">ON</string>
	<string name="pref_filter_enabled_disable">OFF</string>
	<string name="pref_cat_actions">Actions</string>
	<string name="pref_clear_sms">Clear all stored messages</string>
	<string name="pref_clear_sms_message">Confirm clear all messages? This cannot be restored.</string>

	<string name="menu_add">Add Filter</string>
	<string name="menu_settings">Settings</string>

	<string name="desc_add_filter">Choose filter type and content</string>
	<string name="filter_content_edit_hint">Filter content</string>
	<string name="action_mode_title_filter">%d selected</string>
	<string name="action_mode_title_sms">%d selected</string>
	<string name="action_delete_filters">You are deleting %d filter(s).</string>
	<string name="action_preclude_addr">Precluding address of %d message(s).</string>
	<string name="action_delete_sms">Deleting %d message(s).</string>
	<string name="msg_addr_precluded">%d filters created</string>
	<string name="filter_state_permit">Permit</string>
	<string name="filter_state_block">Block</string>
	<string name="filter_desc_edit_hint">Filter description</string>
    <string name="msg_sms_blocked">Message blocked</string>
	<string name="label_filter_type">Type</string>
	<string name="label_filter_state">Method</string>
	<string name="label_filter_content">Content</string>
	<string name="label_desc_content">Description</string>
	<string name="title_dialog_sms_detail">Messsage content</string>

	<string-array name="filter_type">
		<item>Address starts with</item>
		<item>Address contains</item>
		<item>Address ends with</item>
		<item>Content contains</item>
		<item>Address raw</item>
		<item>Content raw</item>
	</string-array>

	<string-array name="filter_desc">
		<item>Address starts w/ %s</item>
		<item>Address contains %s</item>
		<item>Address ends w/ %s</item>
		<item>Content contains %s</item>
		<item>Address is %s</item>
		<item>Content is %s</item>
	</string-array>

	<string-array name="filter_state">
		<item>Block</item>
		<item>Permit</item>
	</string-array>

</resources>