<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="8dp"
		>
	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/desc_add_filter"
			android:textSize="18sp"
			/>

	<TextView
			android:id="@+id/filter_type_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
	        android:text="@string/label_filter_type"
	        android:layout_marginTop="8dp"
			/>
	<Spinner android:id="@+id/filter_type_spinner"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         />

	<TextView
			android:id="@+id/filter_state_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_filter_state"
	        android:layout_marginTop="8dp"
			/>
	<Spinner android:id="@+id/filter_state_spinner"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         />

	<TextView
			android:id="@+id/filter_content_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/label_filter_content"
			android:layout_marginTop="8dp"
			/>
	<EditText android:id="@+id/filter_content_edit"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:hint="@string/filter_content_edit_hint"
	          android:inputType="phone"
	          />

	<TextView
			android:id="@+id/filter_desc_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/label_desc_content"
			android:layout_marginTop="8dp"
			/>
	<EditText
			android:id="@+id/filter_desc_edit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/filter_desc_edit_hint"
			android:inputType="text"
			/>
</LinearLayout>